# Synopsis

./: .env  README.md  config.py  database_setup.py  epub_processor.py  hello.py  main.py  pyproject.toml  search_system.py
book/: Synopsis of Psychiatry_toc.json  The Elegant Universe..epub  The Elegant Universe._toc.json
examples/: basic_usage.py
synopsis/: __init__.py  cli.py
synopsis/core/: __init__.py  database.py  processor.py  search.py
synopsis/models/: __init__.py  chunk.py  toc.py
synopsis/utils/: __init__.py  format.py
